--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,13 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  host: localhost
+  encoding: utf8
+  database: appdb
   pool: 5
-  timeout: 5000
+  username: appuser
+  password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,7 +22,10 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  host: ec2-23-21-170-57.compute-1.amazonaws.com
+  encoding: utf8
+  database: d2kuooc3icd1sr
   pool: 5
-  timeout: 5000
+  username: ubzdgrytpohaab
+  password: KB3keICp_A-p5R9PF50bxeYIbm
